## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = hw5

hw5_SOURCES = \
	main.cc \
	Kit.cpp \
	Kit.h \
	KitList.cpp \
	KitList.h \
	Part.cpp \
	Part.h

hw5_LDFLAGS = 

hw5_LDADD = 


AM_CXXFLAGS = -std=c++11 

AM_LDFLAGS = -lboost_filesystem \
	-lboost_system 
